add .gitignore readme.md index.html

--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Profil</title>
-
-        <link rel="stylesheet" href="/dist/output.css" />
+        <link rel="stylesheet" href="dist/output.css" />
       </head>
       <body>
         <img
           class="fixed top-0 left-0 w-full h-full object-cover"
-          src="image/eberhard-grossgasteiger-x2S9wCbD20c-unsplash (1).jpg"
+          src="src/image/eberhard-grossgasteiger-x2S9wCbD20c-unsplash (1).jpg"
           alt="image"
         />
         <div
@@ -53,7 +52,7 @@
                     mr-4
                     hover:shadow-md
                   "
-                  href=""
+                  href="#"
                 >
                   Contact Me
                 </a>
@@ -144,7 +143,7 @@
                 mb-1
                 md:mb-0
               "
-              src="image/aiony-haust-3TLl_97HNJo-unsplash.jpg"
+              src="src/image/aiony-haust-3TLl_97HNJo-unsplash.jpg"
             />
           </div>
         </div>
