mencoba kembali ke commit awal

--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
           class="
             w-52
             h-52
-            md:rounded-[12px]
-            sm:rounded-full
+            rounded-[12px]
+            hover:rounded-full
             mx-auto
             mt-3
             sm:mt-4
