make change sm rounded in line 155 index.html

--- a/index.html
+++ b/index.html
@@ -147,14 +147,13 @@
             />
           </div>
         </div>
-<<<<<<< HEAD
 
         <img
           class="
             w-52
             h-52
             rounded-[12px]
-            hover:rounded-full
+            sm:rounded-full
             mx-auto
             mt-3
             sm:mt-4
@@ -166,9 +165,5 @@
         />
       </div>
     </div>
-=======
-      </body>
-    </html>
->>>>>>> parent of 1cfd9f6... add configurasi in tailwind.config.js part content
   </body>
 </html>
