remove double image in index.html

--- a/index.html
+++ b/index.html
@@ -147,23 +147,7 @@
             />
           </div>
         </div>
-
-        <img
-          class="
-            w-52
-            h-52
-            rounded-[12px]
-            sm:rounded-full
-            mx-auto
-            mt-3
-            sm:mt-4
-            md:mt-1
-            mb-1
-            md:mb-0
-          "
-          src="src/image/aiony-haust-3TLl_97HNJo-unsplash.jpg"
-        />
-      </div>
-    </div>
+      </body>
+    </html>
   </body>
 </html>
