--- a/index.html
+++ b/index.html
@@ -134,14 +134,12 @@
               class="
                 w-52
                 h-52
-                rounded-[12px]
-                hover:rounded-full
+                rounded-full
+                sm:rounded-lg
                 mx-auto
                 mt-3
                 sm:mt-4
-                md:mt-1
                 mb-1
-                md:mb-0
               "
               src="src/image/aiony-haust-3TLl_97HNJo-unsplash.jpg"
             />
