add theme.fontFamily, add theme.screens in tailwind.config.js

--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
         <div class="h-screen relative flex items-center justify-center">
           <div class="flex lg:w-8/12 w-10/12 flex-col-reverse md:flex-row">
             <div class="md:ml-16 text-white">
-              <h1 class="text-3xl text-center font-bold mb-4">Rebbeca Insta</h1>
+              <h1 class="text-3xl text-center font-lato font-bold mb-4">
+                Rebbeca Insta
+              </h1>
               <div
-                class="uppercase tracking-widest font-light text-xl text-center"
+                class="uppercase tracking-widest font-lato text-xl text-center"
               >
                 fotografer
               </div>
