make text gradient color

--- a/index.html
+++ b/index.html
@@ -30,7 +30,17 @@
         <div class="h-screen relative flex items-center justify-center">
           <div class="flex lg:w-8/12 w-10/12 flex-col-reverse md:flex-row">
             <div class="md:ml-16 text-white">
-              <h1 class="text-3xl text-center font-lato font-bold mb-4">
+              <h1
+                class="
+                  text-3xl text-center
+                  font-lato font-extrabold
+                  text-transparent
+                  bg-clip-text bg-gradient-to-br
+                  from-pink-100
+                  to-red-900
+                  mb-4
+                "
+              >
                 Rebbeca Insta
               </h1>
               <div
